add mainpage.js for start button, update style.css

--- a/quiz.html
+++ b/quiz.html
@@ -14,16 +14,21 @@
         <!-- the timer count will appear here in the h4-->
         <h4 class="countdown"></h4>
     </header>
-    
     <main class="quiz-container">
-        <h1 id="question-h1">Coding Quiz Challenge</h1>
-        <p class="opening-p">
-            Try to answer the following code-related questions within the time limit.<br/>Keep in mind that inccorect
-            answers will penalize your score/time by ten seconds!
-        </p>
-        <button id="select-btn" href="./quiz.html" class="start-btn">Start Quiz</button>
+        <h1 id="question-h1">Question</h1>
+        <div class="quiz-answers">
+            <p class="choice" data-num="1">Choice</p>
+        </div>
+        <div class="quiz-answers">
+            <p class="choice" data-num="2">Choice</p>
+        </div>
+        <div class="quiz-answers">
+            <p class="choice" data-num="3">Choice</p>
+        </div>
+        <div class="quiz-answers">
+            <p class="choice" data-num="4">Choice</p>
+        </div>
     </main>
-    <script src="./assets/js/mainpage.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
