--- a/scores.html
+++ b/scores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Timed Quiz</title>
+    <title>Javascript Timed Quiz: High Scores</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -14,16 +14,9 @@
         <!-- the timer count will appear here in the h4-->
         <h4 class="countdown"></h4>
     </header>
-    
     <main class="quiz-container">
-        <h1 id="question-h1">Coding Quiz Challenge</h1>
-        <p class="opening-p">
-            Try to answer the following code-related questions within the time limit.<br/>Keep in mind that inccorect
-            answers will penalize your score/time by ten seconds!
-        </p>
-        <button id="select-btn" href="./quiz.html" class="start-btn">Start Quiz</button>
+        <h1 id="question-h1"></h1>
     </main>
-    <script src="./assets/js/mainpage.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
