update script.js with ability to choose answer receive next question

--- a/scores.html
+++ b/scores.html
@@ -17,6 +17,6 @@
     <main class="quiz-container">
         <h1 id="question-h1"></h1>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/scores.js"></script>
 </body>
 </html>
