--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
         <h4 class="countdown"></h4>
     </header>
     <main class="quiz-container">
-        <h1 id="question-h1">Question</h1>
+        <h1 id="question-h1"></h1>
         <div class="quiz-answers">
             <p class="choice" data-num="1">Choice</p>
         </div>
