bug highScores.js the highscores array will not sort and displays as undefined

--- a/scores.html
+++ b/scores.html
@@ -15,8 +15,9 @@
         <h4 class="countdown"></h4>
     </header>
     <main class="quiz-container">
-        <h1 id="question-h1"></h1>
+        <ol id='scoreList'></ol>
+        <button class="choice back" href="./index.html">Go Back</button>
     </main>
-    <script src="./assets/js/scores.js"></script>
+    <script src="./assets/js/highScore.js"></script>
 </body>
 </html>
