update style.css for high scores

--- a/scores.html
+++ b/scores.html
@@ -14,9 +14,10 @@
         <!-- the timer count will appear here in the h4-->
         <h4 class="countdown"></h4>
     </header>
-    <main class="quiz-container">
+    <main class="quiz-container scoreContainer">
         <ol id='scoreList'></ol>
         <button class="choice back" href="./index.html">Go Back</button>
+        <button class="choice clear">Clear High Scores</button>
     </main>
     <script src="./assets/js/highScore.js"></script>
 </body>
