add comments to all files and screenshot for README.md

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header>
-        <!-- link to the high scores page -->
-        <a href="./scores.html"><h4 class="scores">View High Scores</h4></a>
         <!-- the timer count will appear here in the h4-->
         <h4 class="countdown"></h4>
     </header>
-    
+    <br>
+    <!-- hold the quiz opener -->
     <main class="quiz-container">
         <h1 id="question-h1">Coding Quiz Challenge</h1>
         <p class="opening-p">
             Try to answer the following code-related questions within the time limit.<br/>Keep in mind that inccorect
             answers will penalize your score/time by ten seconds!
         </p>
+        <!-- button to start the quiz -->
         <button id="select-btn" href="./quiz.html" class="start-btn">Start Quiz</button>
     </main>
     <script src="./assets/js/mainpage.js"></script>
