--- a/quiz.html
+++ b/quiz.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <!-- link to the high scores page -->
-        <a href="./scores.html"><h4 class="scores">View High Scores</h4></a>
         <!-- the timer count will appear here in the h4-->
         <h4 class="countdown"></h4>
     </header>
+    <br/>
+    <!-- container for the quiz question and answers -->
     <main class="quiz-container">
         <h1 id="question-h1"></h1>
         <div class="quiz-answers">
