--- a/scores.html
+++ b/scores.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <!-- link to the high scores page -->
-        <a href="./scores.html"><h4 class="scores">View High Scores</h4></a>
         <!-- the timer count will appear here in the h4-->
         <h4 class="countdown"></h4>
     </header>
+    <br/>
+    <!-- container for the high scores list -->
     <main class="quiz-container scoreContainer">
         <ol id='scoreList'></ol>
+        <!-- back and clear high scores buttons -->
         <button class="choice back" href="./index.html">Go Back</button>
         <button class="choice clear">Clear High Scores</button>
     </main>
